fix header on small screens

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -143,7 +143,6 @@ nav {
 		transform: translateX(-1*(317/1200)*100%);
 	}
 
-	background-repeat: no-repeat;
 	padding-left: $pfontsizeserif;
 	padding-bottom: 0;
 	padding-right: $pfontsizeserif;
@@ -268,7 +267,16 @@ nav {
 	#siteheader {
 		background-image: url("/assets/images/le-beau-soir-top-2.png");
 		background-size: auto 100%;
-		//background-attachment: fixed;
 		background-position: top right;
+		background-repeat: no-repeat;
 	}
+}
+
+@media only screen and (max-width: 21*$pfontsizeserif) {
+	#siteheader {
+		height: $pfontsizeserif 
+				+ $h3fontsizeserif*$fontratio*($lineheightsans/1em) 
+				+ 2*$h1fontsizeserif*($lineheightserif/1em);
+	}
+	#sitetitle {font-size: $h2fontsizeserif; line-height: .75em;}
 }
